# alpr-benchmark

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindALPR.cmake
scripts/: stream-api.sh
